# converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_clang_build_test.sh  install.sh  make.sh  manualBuild.sh  winmake.bat
.github/workflows/: ReadMe.txt  linux.ym_l  linux.yml  linux.yml.disabled  macos.ym_l  macos.yml  parent-workflow.yml  sub-workflow-consolidate-flags.yml  sub-workflow-consolidate.yml  sub-workflow-linux.yml  sub-workflow-macos.yml  sub-workflow-windows.yml  windows-gnu-2.ym_l  windows-gnu-2.yml  windows-gnu-3.yml  windows-gnu.yml  windows.ym_l  windows.yml  windows.yml.disabled
cmake/: _dateConfig.h.in  _workaroundConfig.h.in  checkChrono_fromStream.cpp  checkChrono_toStream.cpp  check_clang_string.cpp  check_constexpr_string_copyN.cpp  check_constexpr_string_operatorEquality.cpp  check_floatingPoint_fromChars.cpp  check_floatingPoint_toChars.cpp  check_three_way_comparison.cpp  converter.cmake
doc/: consolidateWorkAroundFlags.csv  dateConversionAlgo_OScompiler_map.csv  dateConversionAlgo_OScompiler_map.ods  downstreamProject_Changes.ods
doc/converter/: README.md  converter_ConvertFromStr__CH.md  converter_ConvertFromStr__Numeric__S2T_Format_std_CtoT.md  converter_ConvertFromStr__Numeric__S2T_Format_std_StoT.md  converter_ConvertFromStr__T.md  converter_ConvertFromStr__bool.md  converter_ConvertFromStr__std_chrono_year_month_day.md  converter_ConvertFromVal__CH.md  converter_ConvertFromVal__Numeric__T2S_Format_std_TtoC.md  converter_ConvertFromVal__Numeric__T2S_Format_std_TtoS.md  converter_ConvertFromVal__T.md  converter_ConvertFromVal__bool.md  converter_ConvertFromVal__std_chrono_year_month_day.md  converter_ConvertFromVal__std_variant__T.md  converter_Tuple_helpers.md  converter_t_S2Tconv.md  converter_t_T2Sconv.md
doc/converter/specializedTypes/: converter__format_year_month_day.md
examples/: CMakeLists.txt  exConv001.cpp
examples/cmake-add-subdirectory/: CMakeLists.txt  README.md
examples/cmake-add-subdirectory/src/: exprog2.cpp
examples/cmake-fetchcontent/: CMakeLists.txt  README.md
include/commonUtils/: platform.h
include/converter/: _common.h  _convertC2T.h  _convertDate.h  _convertNaN.h  _convertS2T.h  _convertT2C.h  _convertT2S.h  _convertTuple.h  converter.h
include/converter/specializedTypes/: _case_insensitive_string.h  case_insensitive_string.h  date.h
include/specializedTypes/: CompTimeStr.h  RegexString.h  RegexString.hpp  case_insensitive_string.h  date.h
packaging/: converter-config.cmake.in
tests/: CMakeLists.txt  osIdx_TemplateID.h  test001.cpp  testAllTemplateInstantiation.cpp  testBasicConversions.cpp  testBasicTests.cpp  testCIstring.cpp  testDateConversionFormat.cpp  testDateConversionWindowsHeader.cpp  testDateConversions.cpp  testDateYMD_format_YMD.cpp  testDateYMD_format_dbY.cpp  testDefaultTemplateInstantiation.cpp  testFloatingPointLocale.cpp  testFloatingPointNaN.cpp  testFloatingPointPrecision.cpp  testIntegerNaN.cpp  testInvalidComposition.cpp  testPlatform.cpp  testRegexString.cpp  testTemplateInstantiation.cpp  testTupleConversions.cpp  testUserDefinedConverter_LOCALE.cpp  testUserDefinedConverter_locale.cpp  testUserDefinedConverter_lowerPrecision.cpp  unittest.h  utilities.h
